--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "SMS",
+  "name": "sms",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Rodrigo Zan",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ionic serve --port 5022",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -26,7 +26,10 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/status-bar": "6.0.0",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/sms": "^5.36.0",
     "@ionic/angular": "^8.0.0",
+    "cordova-sms-plugin": "^1.0.3",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
